--- a/src/Mvc.Grid.Web/Views/Column/DefaultMethod.cshtml
+++ b/src/Mvc.Grid.Web/Views/Column/DefaultMethod.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Person>
 
 @{
-    ViewBag.Title = "MVC.Grid custom column value rendering";
+    ViewBag.Title = "MVC.Grid default filter method";
 }
 
 <div class="widget example">
     <div class="widget-header">
         <div class="fa fa-bars"></div>
-        <span>Rendering custom column values</span>
+        <span>Filterable grid</span>
         <div class="widget-buttons">
             <span class="fa fa-minus content-toggle"></span>
         </div>
@@ -17,14 +17,16 @@
             .Grid(Model)
             .Build(columns =>
             {
-                columns.Add(model => model.Name);
-                columns.Add(model => model.Surname);
+                columns.Add(model => model.Name).WithDefaultFilterMethod("equals");
+                columns.Add(model => model.Surname).WithDefaultFilterMethod("contains");
                 columns.Add(model => model.MaritalStatus);
 
-                columns.Add(model => model.Age);
+                columns.Add(model => model.Age).WithDefaultFilterMethod("less-than-or-equal");
                 columns.Add(model => model.Birthday).Formatted("{0:d}");
-                columns.Add(model => model.IsWorking).RenderedAs(model => model.IsWorking == true ? "Employed" : "Unemployed");
+                columns.Add(model => model.IsWorking);
             })
+            .Empty("No data found")
+            .Filterable()
         )
     </div>
 </div>
@@ -46,14 +48,16 @@
     .Grid(Model)
     .Build(columns =>
     {
-        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
-        columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
+        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>).WithDefaultFilterMethod(<span class="str">"equals"</span>);
+        columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>).WithDefaultFilterMethod(<span class="str">"contains"</span>);
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
-        columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
+        columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>).WithDefaultFilterMethod(<span class="str">"less-than-or-equal"</span>);
         columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
-        columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>).RenderedAs(model => model.IsWorking == <span class="kwd">true</span> ? <span class="str">"Employed"</span> : <span class="str">"Unemployed"</span>);
+        columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
+    .Empty(<span class="str">"No data found"</span>)
+    .Filterable()
 )
 </code>
 </pre>
