--- a/src/Mvc.Grid.Web/Views/Grid/Styling.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Styling.cshtml
@@ -17,13 +17,13 @@
             .Grid(Model)
             .Build(columns =>
             {
-                columns.Add(model => model.Name).Titled("Name");
-                columns.Add(model => model.Surname).Titled("Surname");
-                columns.Add(model => model.MaritalStatus).Titled("Marital status");
+                columns.Add(model => model.Name);
+                columns.Add(model => model.Surname);
+                columns.Add(model => model.MaritalStatus);
 
-                columns.Add(model => model.Age).Titled("Age");
-                columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
-                columns.Add(model => model.IsWorking).Titled("Employed");
+                columns.Add(model => model.Age);
+                columns.Add(model => model.Birthday).Formatted("{0:d}");
+                columns.Add(model => model.IsWorking);
             })
             .Css("css-classes")
             .AppendCss("table-hover")
@@ -54,7 +54,7 @@
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
     .Css(<span class="str">"css-classes"</span>) <span class="com">// Overwrites all classes with the new ones</span>
@@ -77,7 +77,7 @@
 <code>
 &lt;style&gt;
     .table-hover tbody tr:hover {
-        background-color: rgba(0, 0, 0, 0.075);
+        background-color: rgba(0, 0, 0, 0.04);
     }
 &lt;/style&gt;
 </code>
@@ -85,9 +85,3 @@
         </div>
     </div>
 </div>
-
-<style>
-    table tbody tr {
-        cursor: pointer;
-    }
-</style>
