--- a/src/Mvc.Grid.Web/Views/Javascript/RowClicked.cshtml
+++ b/src/Mvc.Grid.Web/Views/Javascript/RowClicked.cshtml
@@ -18,30 +18,22 @@
                 .Grid(Model)
                 .Build(columns =>
                 {
-                    columns.Add(model => model.Name).Titled("Name").Filterable(true);
-                    columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
+                    columns.Add(model => model.Name);
+                    columns.Add(model => model.Surname);
+                    columns.Add(model => model.MaritalStatus);
+
+                    columns.Add(model => model.Age);
+                    columns.Add(model => model.Birthday).Formatted("{0:d}");
+                    columns.Add(model => model.IsWorking);
                 })
                 .Pageable(pager =>
                 {
                     pager.RowsPerPage = 3;
                 })
+                .Css("table-hover")
+                .Filterable()
                 .Sortable()
             )
-        </div>
-    </div>
-    <div class="widget console col">
-        <div class="widget-header">
-            <div class="fa fa-angle-right"></div>
-            <span>Script output</span>
-            <div class="widget-buttons">
-                <span class="fa fa-minus content-toggle"></span>
-            </div>
-        </div>
-        <div class="widget-content">
-<pre>
-<code class="script-output">
-</code>
-</pre>
         </div>
     </div>
 </div>
@@ -64,13 +56,19 @@
     .Grid(Model)
     .Build(columns =>
     {
-        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>).Filterable(<span class="kwd">true</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>);
+        columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>);
+        columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
+
+        columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
     .Pageable(pager =>
     {
         pager.RowsPerPage = 3;
     })
+    .Filterable()
     .Sortable()
 )
 </code>
@@ -88,22 +86,10 @@
         <div class="widget-content">
 <pre>
 <code>
-$(<span class="str">'.mvc-grid'</span>).mvcgrid({
-    rowClicked: <span class="kwd">function</span> (row, data, e) {
-        console.log(<span class="str">'grid: '</span>, <span class="kwd">this</span>);
-        console.log(<span class="str">'row: '</span>, row);
-        console.log(<span class="str">'data: '</span>, data);
-        console.log(<span class="str">'click event: '</span>, e);
-    }
-});
-
-<span class="com">// or</span>
-
-$(<span class="str">'.mvc-grid tr'</span>).on(<span class="str">'rowclick'</span>, <span class="kwd">function</span> (e, data, grid, originalEvent) {
-    console.log(<span class="str">'row: '</span>, <span class="kwd">this</span>);
-    console.log(<span class="str">'event: '</span>, e);
-    console.log(<span class="str">'data: '</span>, data);
-    console.log(<span class="str">'grid: '</span>, grid);
+$(<span class="str">'.mvc-grid tr'</span>).on(<span class="str">'rowclick'</span>, <span class="kwd">function</span> (e) {
+    console.log(<span class="str">'data: '</span>, e.detail.data);
+    console.log(<span class="str">'grid: '</span>, e.detail.grid);
+    console.log(<span class="str">'original event: '</span>, e.detail.originalEvent);
 });
 </code>
 </pre>
@@ -111,93 +97,12 @@ $(<span class="str">'.mvc-grid tr'</span>).on(<span class="str">'rowclick'</span
     </div>
 </div>
 
-<style>
-    .selected {
-        background-color: rgba(0, 0, 0, 0.075);
-    }
-
-    .mvc-grid tbody tr {
-        cursor: pointer;
-    }
-</style>
-
 @section scripts {
     <script>
-        $('.mvc-grid').mvcgrid({
-            rowClicked: function (row, data) {
-                $(row).siblings().removeClass('selected');
-                $(row).toggleClass('selected');
-                console.log(this);
-                if ($(row).hasClass('selected')) {
-                    var rowData = [];
-                    var columnHtml = [];
-
-                    for (var key in data) {
-                        rowData.push('    "' + key + '": "' + data[key] + '"');
-                    }
-                    for (var i = 0; i < this.columns.length; i++) {
-                        if (this.columns[i].filter) {
-                            columnHtml.push(
-                                '\n' +
-                                '        {\n' +
-                                '            "name": "' + this.columns[i].name + '",\n' +
-                                '            "filter": {\n' +
-                                '                "name": "' + this.columns[i].filter.name + '",\n' +
-                                '                "operator": "' + this.columns[i].filter.operator + '",\n' +
-                                '                "isMulti": ' + this.columns[i].filter.isMulti + ',\n' +
-                                '                "hasOptions": ' + this.columns[i].filter.hasOptions + ',\n' +
-                                '                "first": {\n' +
-                                '                    "method": "' + this.columns[i].filter.first.method + '",\n' +
-                                '                    "value": "' + this.columns[i].filter.first.value + '"\n' +
-                                '                },\n' +
-                                '                "second": {\n' +
-                                '                    "method": "' + this.columns[i].filter.second.method + '",\n' +
-                                '                    "value": "' + this.columns[i].filter.second.value + '"\n' +
-                                '                }\n' +
-                                '            },\n' +
-                                '            "sort": {\n' +
-                                '               "order": "' + this.columns[i].sort.order + '",\n' +
-                                '               "firstsOrder": "' + this.columns[i].sort.firstOrder + '",\n' +
-                                '            }\n' +
-                                '        }');
-                        } else {
-                            columnHtml.push(
-                                '\n' +
-                                '        {\n' +
-                                '            "name": "' + this.columns[i].name + '",\n' +
-                                '            "filter": null,\n' +
-                                '            "sort": {\n' +
-                                '               "order": "' + this.columns[i].sort.order + '",\n' +
-                                '               "firstsOrder": "' + this.columns[i].sort.firstOrder + '",\n' +
-                                '            }\n' +
-                                '        }');
-                        }
-                    }
-
-                    var rowHtml = '\ndata: {\n' + rowData.join(',\n') + '\n}';
-                    var gridHtml =
-                        'grid: {\n' +
-                        '    "name": "' + this.name + '",\n' +
-                        '    "loadingDelay": "' + (this.loadingDelay || '') + '",\n' +
-                        '    "requestType": "' + this.requestType + '",\n' +
-                        '    "filterMode": "' + this.filterMode + '",\n' +
-                        '    "query": "' + this.query + '",\n' +
-                        '    "columns": [' +
-                                columnHtml.join(',') + '\n' +
-                        '    ]\n' +
-                        '    "pager": {\n' +
-                        '        "currentPage": "' + this.pager.currentPage + '",\n' +
-                        '        "element": $Query pager element,\n' +
-                        '        "pages": $Query pager page elements,\n' +
-                        '        "rowsPerPage": $Query rows per page element,\n' +
-                        '    }\n' +
-                        '}\n';
-
-                    $('.script-output').html(rowHtml + '\n' + gridHtml);
-                } else {
-                    $('.script-output').html('');
-                }
-            }
+        document.addEventListener('rowclick', function (e) {
+            console.log('grid: ', e.detail.grid);
+            console.log('data: ', e.detail.data);
+            console.log('original event: ', e.detail.originalEvent);
         });
     </script>
 }
