--- a/src/Mvc.Grid.Web/Views/Column/CustomFilter.cshtml
+++ b/src/Mvc.Grid.Web/Views/Column/CustomFilter.cshtml
@@ -17,19 +17,19 @@
             .Grid(Model)
             .Build(columns =>
             {
-                columns.Add(model => model.Name).Titled("Name").Filterable(true).FilteredAs("custom");
-                columns.Add(model => model.Surname).Titled("Surname").MultiFilterable(true).FilteredAs("custom");
-                columns.Add(model => model.MaritalStatus).Titled("Marital status");
+                columns.Add(model => model.Name).Filterable(true).FilteredAs("custom");
+                columns.Add(model => model.Surname).MultiFilterable(true).FilteredAs("custom");
+                columns.Add(model => model.MaritalStatus);
 
-                columns.Add(model => model.Age).Titled("Age");
-                columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
-                columns.Add(model => model.IsWorking).Titled("Employed");
+                columns.Add(model => model.Age);
+                columns.Add(model => model.Birthday).Formatted("{0:d}");
+                columns.Add(model => model.IsWorking);
             })
         )
     </div>
 </div>
 <div class="row">
-    <div class="widget code col">
+    <div class="widget code col-xl-7">
         <div class="widget-header">
             <div class="fa fa-code"></div>
             <span>View</span>
@@ -47,12 +47,11 @@
     .Build(columns =>
     {
         columns.Add(model => model.Name).Titled(<span class="str">"Name"</span>).Filterable(<span class="kwd">true</span>).FilteredAs(<span class="str">"custom"</span>);
-        columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>)
-            .MultiFilterable(<span class="kwd">true</span>).FilteredAs(<span class="str">"custom"</span>);
+        columns.Add(model => model.Surname).Titled(<span class="str">"Surname"</span>).MultiFilterable(<span class="kwd">true</span>).FilteredAs(<span class="str">"custom"</span>);
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
 )
@@ -74,25 +73,21 @@
 <span class="kwd">var</span> CustomTextFilter = (<span class="kwd">function</span> (base) {
     MvcGridExtends(CustomTextFilter, base);
 
-    <span class="kwd">function</span> CustomTextFilter() {
-        base.apply(<span class="kwd">this</span>);
+    <span class="kwd">function</span> CustomTextFilter(column) {
+        base.call(<span class="kwd">this</span>, column);
 
         <span class="kwd">this</span>.methods = [<span class="str">'contains'</span>];
+        column.grid.lang.custom = { contains: <span class="str">'Contains'</span> };
     }
 
     <span class="com">// Other extension points can be found at MvcGridFilter declaration</span>
-    CustomTextFilter.prototype.renderFilter = <span class="kwd">function</span> (grid, filter) {
-        <span class="kwd">var</span> lang = { <span class="str">'contains'</span>: <span class="str">'Contains'</span> };
-
-        <span class="kwd">return</span> base.prototype.renderFilter.call(<span class="kwd">this</span>, grid, filter, lang);
-    };
 
     <span class="kwd">return</span> CustomTextFilter;
 })(MvcGridFilter);
 
-$(<span class="str">'.mvc-grid'</span>).mvcgrid({
+<span class="kwd">new</span> <span class="cls">MvcGrid</span>(document.querySelector(<span class="str">'.mvc-grid'</span>), {
     filters: {
-        <span class="str">'custom'</span>: <span class="kwd">new</span> CustomTextFilter()
+        <span class="str">'custom'</span>: CustomTextFilter
     }
 });
 </code>
@@ -106,24 +101,19 @@ $(<span class="str">'.mvc-grid'</span>).mvcgrid({
         var CustomTextFilter = (function (base) {
             MvcGridExtends(CustomTextFilter, base);
 
-            function CustomTextFilter() {
-                base.apply(this);
+            function CustomTextFilter(column) {
+                base.call(this, column);
 
                 this.methods = ['contains'];
+                column.grid.lang.custom = { contains: 'Contains' };
             }
-
-            CustomTextFilter.prototype.renderFilter = function (grid, filter) {
-                var lang = { 'contains': 'Contains' };
-
-                return base.prototype.renderFilter.call(this, grid, filter, lang);
-            };
 
             return CustomTextFilter;
         })(MvcGridFilter);
 
-        $('.mvc-grid').mvcgrid({
+        new MvcGrid(document.querySelector('.mvc-grid'), {
             filters: {
-                'custom': new CustomTextFilter()
+                'custom': CustomTextFilter
             }
         });
     </script>
