--- a/src/Mvc.Grid.Web/Views/Column/Formatting.cshtml
+++ b/src/Mvc.Grid.Web/Views/Column/Formatting.cshtml
@@ -17,13 +17,13 @@
             .Grid(Model)
             .Build(columns =>
             {
-                columns.Add(model => model.Name).Titled("Name");
-                columns.Add(model => model.Surname).Titled("Surname");
-                columns.Add(model => model.MaritalStatus).Titled("Marital status");
+                columns.Add(model => model.Name);
+                columns.Add(model => model.Surname);
+                columns.Add(model => model.MaritalStatus);
 
-                columns.Add(model => model.Age).Titled("Age");
+                columns.Add(model => model.Age);
                 columns.Add(model => model.Birthday).Titled("Birth year").Formatted("{0: yyyy}");
-                columns.Add(model => model.IsWorking).Titled("Employed");
+                columns.Add(model => model.IsWorking);
             })
         )
     </div>
