--- a/src/Mvc.Grid.Web/Views/Column/Sorting.cshtml
+++ b/src/Mvc.Grid.Web/Views/Column/Sorting.cshtml
@@ -17,13 +17,13 @@
             .Grid(Model)
             .Build(columns =>
             {
-                columns.Add(model => model.Name).Titled("Name").Sortable(true);
-                columns.Add(model => model.Surname).Titled("Surname").Sortable(false);
-                columns.Add(model => model.MaritalStatus).Titled("Marital status");
+                columns.Add(model => model.Name).Sortable(true);
+                columns.Add(model => model.Surname).Sortable(false);
+                columns.Add(model => model.MaritalStatus);
 
-                columns.Add(model => model.Age).Titled("Age").Sortable(true);
-                columns.Add(model => model.Birthday).Titled("Birth date").Sortable(true);
-                columns.Add(model => model.IsWorking).Titled("Employed").Sortable(true);
+                columns.Add(model => model.Age).Sortable(true);
+                columns.Add(model => model.Birthday).Sortable(true).Formatted("{0:d}");
+                columns.Add(model => model.IsWorking).Sortable(true);
             })
         )
     </div>
@@ -51,7 +51,7 @@
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>).Sortable(<span class="kwd">true</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Sortable(<span class="kwd">true</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>).Sortable(<span class="kwd">true</span>);
     })
 )
