--- a/src/Mvc.Grid.Web/Views/Column/Styling.cshtml
+++ b/src/Mvc.Grid.Web/Views/Column/Styling.cshtml
@@ -18,13 +18,13 @@
             .Build(columns =>
             {
                 columns.Add(model => model.Id).Css("collapse");
-                columns.Add(model => model.Name).Titled("Name");
-                columns.Add(model => model.Surname).Titled("Surname");
-                columns.Add(model => model.MaritalStatus).Titled("Marital status");
+                columns.Add(model => model.Name);
+                columns.Add(model => model.Surname);
+                columns.Add(model => model.MaritalStatus);
 
                 columns.Add(model => model.Age).Titled("Bolded age").Css("bolded");
-                columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
-                columns.Add(model => model.IsWorking).Titled("Employed");
+                columns.Add(model => model.Birthday).Formatted("{0:d}");
+                columns.Add(model => model.IsWorking);
             })
         )
     </div>
@@ -55,7 +55,7 @@
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Bolded age"</span>).Css(<span class="str">"bolded"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
 )
@@ -88,9 +88,3 @@
         </div>
     </div>
 </div>
-
-<style>
-    .bolded {
-        font-weight: bold;
-    }
-</style>
