--- a/src/Mvc.Grid.Web/Views/Grid/Footer.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Footer.cshtml
@@ -17,13 +17,13 @@
             .Grid(Model)
             .Build(columns =>
             {
-                columns.Add(model => model.Name).Titled("Name");
-                columns.Add(model => model.Surname).Titled("Surname");
-                columns.Add(model => model.MaritalStatus).Titled("Marital status");
+                columns.Add(model => model.Name);
+                columns.Add(model => model.Surname);
+                columns.Add(model => model.MaritalStatus);
 
-                columns.Add(model => model.Age).Titled("Age");
-                columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
-                columns.Add(model => model.IsWorking).Titled("Employed");
+                columns.Add(model => model.Age);
+                columns.Add(model => model.Birthday).Formatted("{0:d}");
+                columns.Add(model => model.IsWorking);
             })
             .WithFooter("_GridFooter")
         )
@@ -53,7 +53,7 @@
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
     .WithFooter(<span class="str">"_GridFooter"</span>)
@@ -76,8 +76,7 @@
 @@model <span class="cls">IGrid</span>&lt;<span class="cls">Person</span>&gt;
 
 &lt;tr&gt;
-    &lt;td colspan="2"&gt;&lt;b&gt;Average&lt;/b&gt;&lt;/td&gt;
-    &lt;td&gt;&lt;/td&gt;
+    &lt;td colspan="3"&gt;&lt;b&gt;Average&lt;/b&gt;&lt;/td&gt;
     &lt;td&gt;&lt;b&gt;@@(Model.Rows.Average(row =&gt; row.Model.Age))&lt;/b&gt;&lt;/td&gt;
     &lt;td&gt;&lt;/td&gt;
     &lt;td&gt;&lt;/td&gt;
