--- a/src/Mvc.Grid.Web/Views/Grid/Multiple.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Multiple.cshtml
@@ -18,13 +18,13 @@
                 .Grid(Model)
                 .Build(columns =>
                 {
-                    columns.Add(model => model.Name).Titled("Name");
-                    columns.Add(model => model.Surname).Titled("Surname");
-                    columns.Add(model => model.MaritalStatus).Titled("Marital status");
+                    columns.Add(model => model.Name);
+                    columns.Add(model => model.Surname);
+                    columns.Add(model => model.MaritalStatus);
 
-                    columns.Add(model => model.Age).Titled("Age");
-                    columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
-                    columns.Add(model => model.IsWorking).Titled("Employed");
+                    columns.Add(model => model.Age);
+                    columns.Add(model => model.Birthday).Formatted("{0:d}");
+                    columns.Add(model => model.IsWorking);
                 })
                 .Empty("No data found")
                 .Named("first")
@@ -46,13 +46,13 @@
                 .Grid(Model)
                 .Build(columns =>
                 {
-                    columns.Add(model => model.Name).Titled("Name");
-                    columns.Add(model => model.Surname).Titled("Surname");
-                    columns.Add(model => model.MaritalStatus).Titled("Marital status");
+                    columns.Add(model => model.Name);
+                    columns.Add(model => model.Surname);
+                    columns.Add(model => model.MaritalStatus);
 
-                    columns.Add(model => model.Age).Titled("Age");
-                    columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
-                    columns.Add(model => model.IsWorking).Titled("Employed");
+                    columns.Add(model => model.Age);
+                    columns.Add(model => model.Birthday).Formatted("{0:d}");
+                    columns.Add(model => model.IsWorking);
                 })
                 .Empty("No data found")
                 .Named("second")
@@ -86,7 +86,7 @@
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
     .Empty(<span class="str">"No data found"</span>)
@@ -120,7 +120,7 @@
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
     .Empty(<span class="str">"No data found"</span>)
