--- a/src/Mvc.Grid.Web/Views/Grid/Partial.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/Partial.cshtml
@@ -17,13 +17,13 @@
             .Grid("_NestedPersonGrid", Model)
             .Build(columns =>
             {
-                columns.Add(model => model.Name).Titled("Name");
-                columns.Add(model => model.Surname).Titled("Surname");
-                columns.Add(model => model.MaritalStatus).Titled("Marital status");
+                columns.Add(model => model.Name);
+                columns.Add(model => model.Surname);
+                columns.Add(model => model.MaritalStatus);
 
-                columns.Add(model => model.Age).Titled("Age");
-                columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
-                columns.Add(model => model.IsWorking).Titled("Employed");
+                columns.Add(model => model.Age);
+                columns.Add(model => model.Birthday).Formatted("{0:d}");
+                columns.Add(model => model.IsWorking);
             })
         )
     </div>
@@ -51,7 +51,7 @@
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
 )
@@ -107,7 +107,7 @@
                                     {
                                         columns.Add(model => model.Name).Titled("Child name");
                                         columns.Add(model => model.Age).Titled("Age");
-                                        columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
+                                        columns.Add(model => model.Birthday).Titled("Birthday").Formatted("{0:d}");
                                     })
                                 )
                             &lt;/td&gt;
