--- a/src/Mvc.Grid.Web/Views/Grid/RowAttributes.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/RowAttributes.cshtml
@@ -17,15 +17,16 @@
             .Grid(Model)
             .Build(columns =>
             {
-                columns.Add(model => model.Name).Titled("Name");
-                columns.Add(model => model.Surname).Titled("Surname");
-                columns.Add(model => model.MaritalStatus).Titled("Marital status");
+                columns.Add(model => model.Name);
+                columns.Add(model => model.Surname);
+                columns.Add(model => model.MaritalStatus);
 
-                columns.Add(model => model.Age).Titled("Age");
-                columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
-                columns.Add(model => model.IsWorking).Titled("Employed");
+                columns.Add(model => model.Age);
+                columns.Add(model => model.Birthday).Formatted("{0:d}");
+                columns.Add(model => model.IsWorking);
             })
             .RowAttributed(model => new { data_id = model.Id })
+            .Css("table-hover")
         )
     </div>
 </div>
@@ -53,7 +54,7 @@
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
     .RowAttributed(model => <span class="kwd">new</span> { data_id = model.Id })
@@ -73,10 +74,8 @@
         <div class="widget-content">
 <pre>
 <code>
-$(<span class="str">'.mvc-grid'</span>).mvcgrid({
-    rowClicked: <span class="kwd">function</span> (row, data, e) {
-        console.log($(row).data(<span class="str">'id'</span>));
-    }
+document.querySelector(<span class="str">'.mvc-grid'</span>).addEventListener(<span class="str">'rowclick'</span>, <span class="kwd">function</span> (e) {
+    console.log(e.target.dataset.id);
 });
 </code>
 </pre>
@@ -84,18 +83,10 @@ $(<span class="str">'.mvc-grid'</span>).mvcgrid({
     </div>
 </div>
 
-<style>
-    .mvc-grid tbody tr {
-        cursor: pointer;
-    }
-</style>
-
 @section scripts {
     <script>
-        $('.mvc-grid').mvcgrid({
-            rowClicked: function (row) {
-                console.log($(row).data('id'));
-            }
+        document.querySelector('.mvc-grid').addEventListener('rowclick', function (e) {
+            console.log(e.target.dataset.id);
         });
     </script>
 }
