--- a/src/Mvc.Grid.Web/Views/Grid/SourceUrl.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/SourceUrl.cshtml
@@ -84,7 +84,7 @@
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
     .WithSourceUrl(Url.Action(<span class="str">"Index"</span>, <span class="str">"Grid"</span>))
