--- a/src/Mvc.Grid.Web/Views/Grid/_SourceUrlGrid.cshtml
+++ b/src/Mvc.Grid.Web/Views/Grid/_SourceUrlGrid.cshtml
@@ -4,13 +4,13 @@
     .Grid(Model)
     .Build(columns =>
     {
-        columns.Add(model => model.Name).Titled("Name");
-        columns.Add(model => model.Surname).Titled("Surname");
-        columns.Add(model => model.MaritalStatus).Titled("Marital status");
+        columns.Add(model => model.Name);
+        columns.Add(model => model.Surname);
+        columns.Add(model => model.MaritalStatus);
 
-        columns.Add(model => model.Age).Titled("Age");
-        columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
-        columns.Add(model => model.IsWorking).Titled("Employed");
+        columns.Add(model => model.Age);
+        columns.Add(model => model.Birthday).Formatted("{0:d}");
+        columns.Add(model => model.IsWorking);
     })
     .WithSourceUrl(Url.Action("SourceUrl", "Grid"))
     .Empty("No data found")
