--- a/src/Mvc.Grid.Web/Views/Javascript/_ReloadEventsGrid.cshtml
+++ b/src/Mvc.Grid.Web/Views/Javascript/_ReloadEventsGrid.cshtml
@@ -4,9 +4,9 @@
     .Grid(Model)
     .Build(columns =>
     {
-        columns.Add(model => model.Name).Titled("Name");
-        columns.Add(model => model.Surname).Titled("Surname");
-        columns.Add(model => model.MaritalStatus).Titled("Marital status");
+        columns.Add(model => model.Name);
+        columns.Add(model => model.Surname);
+        columns.Add(model => model.MaritalStatus);
 
         columns.Add(model => DateTime.Now).Titled("Time stamp");
     })
