--- a/src/Mvc.Grid.Web/Views/Pager/CurrentPage.cshtml
+++ b/src/Mvc.Grid.Web/Views/Pager/CurrentPage.cshtml
@@ -17,13 +17,13 @@
             .Grid(Model)
             .Build(columns =>
             {
-                columns.Add(model => model.Name).Titled("Name");
-                columns.Add(model => model.Surname).Titled("Surname");
-                columns.Add(model => model.MaritalStatus).Titled("Marital status");
+                columns.Add(model => model.Name);
+                columns.Add(model => model.Surname);
+                columns.Add(model => model.MaritalStatus);
 
-                columns.Add(model => model.Age).Titled("Age");
-                columns.Add(model => model.Birthday).Titled("Birth date").Formatted("{0:d}");
-                columns.Add(model => model.IsWorking).Titled("Employed");
+                columns.Add(model => model.Age);
+                columns.Add(model => model.Birthday).Formatted("{0:d}");
+                columns.Add(model => model.IsWorking);
             })
             .Pageable(pager =>
             {
@@ -49,9 +49,7 @@
 [<span class="cls">HttpGet</span>]
 <span class="kwd">public</span> <span class="cls">ViewResult</span> Index()
 {
-    <span class="kwd">return</span> View(Context.Set&lt;<span class="cls">Person</span>&gt;().OrderBy(model => model.Id));
-
-    <span class="com">// Has to be ordered in database query scenarios for paging to work!</span>
+    <span class="kwd">return</span> View(Context.Set&lt;<span class="cls">Person</span>&gt;());
 }
 </code>
 </pre>
@@ -79,7 +77,7 @@
         columns.Add(model => model.MaritalStatus).Titled(<span class="str">"Marital status"</span>);
 
         columns.Add(model => model.Age).Titled(<span class="str">"Age"</span>);
-        columns.Add(model => model.Birthday).Titled(<span class="str">"Birth date"</span>).Formatted(<span class="str">"{0:d}"</span>);
+        columns.Add(model => model.Birthday).Titled(<span class="str">"Birthday"</span>).Formatted(<span class="str">"{0:d}"</span>);
         columns.Add(model => model.IsWorking).Titled(<span class="str">"Employed"</span>);
     })
     .Pageable(pager =>
